<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_home"/>
    <item
        android:id="@+id/nav_category"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_category"/>
    <item
        android:id="@+id/nav_add"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/nav_add"/>
    <item
        android:id="@+id/nav_wallet"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_wallet"/>
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile"/>
</menu>
